tests/integration/snapshots/integration__conformance__n_object_repeated_null_null.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
{null:null,null:null}
stderr ---
error: expected entry or closed delimiter `}`, found `null`
 --> stdin:1:2
  |
1 | {null:null,null:null}
  | -^^^^
  | |
  | expected due to `{`
